fix theme overflow

--- a/source/css/_partial/mobile.scss
+++ b/source/css/_partial/mobile.scss
@@ -91,7 +91,7 @@
             font-size: 26px;
         }
         .conf-theme {
-            font-size: 18px;
+            font-size: 16px;
         }
         .conf-info {
             margin-top: 15px;
